# BIGfetch

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
config/: config.json
include/: ascii.h  colors.h  configreader.h  display.h  systeminfo.h
src/: configreader.cpp  main.cpp
src/ascii/: ascii.cpp  logo.txt
src/colors/: colors.cpp
src/display/: display.cpp
src/sysinfo/: systeminfo.cpp
